--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,1 @@
-@misc{ganguli_2013, title={A short history of TeX and LaTeX}, url={https://swetava.wordpress.com/2013/10/31/a-short-history-of-tex-and-latex/}, journal={Swetava's Blog}, author={Ganguli, Swetava}, year={2013}, month={Nov}}
-@book{lamport_1994, place={Reading, MA}, title={LaTeX: a document preparation system}, publisher={Addison-Wesley}, author={Lamport, Leslie}, year={1994}}
-@misc{ctan, title={The Comprehensive TeX Archive Network}, url={https://ctan.org/}, journal={CTAN Atom}}
-@misc{thelatex3, url={https://www.latex-project.org/latex3/}, journal={The LaTeX3 Project}}
-@misc{callegar_2015, title={callegar/LaTeX-draftwatermark}, url={https://github.com/callegar/LaTeX-draftwatermark}, journal={GitHub}, author={Callegar}, year={2015}, month={Jun}}
-@article{oostrum_2019, title={The fancyhdr and extramarks packages}, url={http://mirrors.ucr.ac.cr/CTAN/macros/latex/contrib/fancyhdr/fancyhdr.pdf}, journal={The fancyhdr and extramarks packages}, author={Oostrum, Piet van}, year={2019}, month={Jan}}
+@book{crease_2014, place={New York}, title={The prism and the pendulum the ten most beautiful experiments in science}, publisher={Random House}, author={Crease, Robert P.}, year={2014}}
